Fixed vertical spacing between lists and paragraphs in post bodies

--- a/web/sass-files/sass/partials/_post.scss
+++ b/web/sass-files/sass/partials/_post.scss
@@ -417,12 +417,6 @@ body.ios {
 		background-color: beige;
 	}
 
-	ul {
-		margin: 0;
-		padding: 0;
-	}
-
-
 	p {
 		margin: 0;
 		line-height: 1.6em;
@@ -675,12 +669,10 @@ body.ios {
 			max-height: 400px;
 		}
 
-		ul {
-		    margin-bottom: 0.4em;
-			padding: 5px 0 0 20px;
-		}
-
 		ul, ol {
+			padding-top: 5px;
+			margin-bottom: 0.4em;
+
 			p {
 				margin-bottom: 0;
 			}
